# lab-1806-vec-db

./: .gitignore  Cargo.toml  README.md  lab_1806_vec_db.pyi  pyproject.toml  test-pyo3.py  test_exception.py  test_pyo3.py
.github/workflows/: CI.yml  check.yml
benches/: simd_bench.rs
config/: bench_10000_gpu_hnsw.toml  bench_10000_gpu_ivf.toml  bench_10000_gpu_linear.toml  bench_10000_hnsw.toml  bench_10000_ivf.toml  bench_10000_pq_flat.toml  bench_10000_pq_hnsw.toml  bench_10000_pq_linear.toml  bench_10000_simd_hnsw.toml  bench_10000_wgpu_hnsw.toml  bench_hnsw.toml  bench_pq_240_hnsw.toml  bench_pq_hnsw.toml  bench_simd_hnsw.toml  bench_wgpu_hnsw.toml  db_config.toml  gist_1000.toml  gist_test.toml
config/example/: db_config.toml
data/: bench_1e4.toml  bench_1e6.toml  t64_bench.toml  t64_bench_1e4.toml  t_bench.toml  t_bench_1e4.toml  t_bench_pq.toml
examples/: bench.rs  data_loader_test.rs  hnsw_bench.rs  hnsw_simple_test.rs  ivf_bench.rs  load_vec_set_test.rs  pq_table_test.rs  test_exception.py  test_multi_threads.py  test_pyo3.py  test_try_lock.py
pyo3-tools/: build.ps1  test.py  u-build.sh
src/: binary_scalar.rs  config.rs  distance.rs  index_algorithm.rs  k_means.rs  lib.rs  pq_table.rs  scalar.rs  vec_set.rs
src/database/: debounce.rs  dynamic_index.rs  metadata_vec_table.rs  mod.rs  thread_save.rs
src/distance/: batch_distance.rs  gpu_cache.rs  gpu_dist.rs  k_means.rs  mod.rs  pq_table.rs  wgpu_cache.rs
src/index_algorithm/: candidate_pair.rs  flat_index.rs  hnsw_index.rs  ivf_index.rs  linear_index.rs  mod.rs  pq_linear_index.rs  reuseable_visited.rs
src/pyo3/: mod.rs
