[package]
name = "lab-1806-vec-db"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bincode = "1.3.3"
clap = { version = "4.5.18", features = ["derive"] }
indicatif = "0.17.8"
ordered-float = { version = "4.2.2", features = ["serde"] }
rand = "0.8.5"
serde = { version = "1.0.206", features = ["derive"] }
toml = "0.8.19"


[dev-dependencies]
plotly = "0.10.0"
