[package]
name = "lab-1806-vec-db"
version = "0.7.1"
edition = "2021"

[lib]
name = "lab_1806_vec_db"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.86"
bincode = "1.3.3"
clap = { version = "4.5.18", features = ["derive"] }
indicatif = "0.17.8"
ordered-float = { version = "4.2.2", features = ["serde"] }
rand = "0.8.5"
serde = { version = "1.0.206", features = ["derive"] }
toml = "0.8.19"
pyo3 = { version = "0.24.2", features = ["extension-module"], optional = true }
fs2 = "0.4.3"
tempfile = "3.13.0"
rayon = "1.10.0"
mimalloc = "0.1.46"


[dev-dependencies]
plotly = "0.10.0"

[features]
pyo3 = ["dep:pyo3"]
